--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Title Page</title>
+		<title>Bintang Muhammad</title>
 
 		<!-- Bootstrap CSS -->
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<div class="container ">
-			<div class="panel panel-default">
+			<div class="panel panel-default" style="padding: 50px; margin: 50px auto;">
 				<h1>Hello World</h1>
 				Test A Page
 			</div>
