--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
-<!DOCTYPE html>
-<html lang="">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Bintang Muhammad</title>
+ <!DOCTYPE html>
+  <html>
+    <head>
+    <title>Bintang Muhammad - GitHub Pages</title>
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="style.css" >
 
-		<!-- Bootstrap CSS -->
-		<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    </head>
 
-		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-		<![endif]-->
-	</head>
-	<body>
-		<div class="container ">
-			<div class="panel panel-default" style="padding: 50px; margin: 50px auto;">
-				<h1>Hello World</h1>
-				Test A Page
-			</div>
-		</div>
-		<!-- jQuery -->
-		<script src="//code.jquery.com/jquery.js"></script>
-		<!-- Bootstrap JavaScript -->
-		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-	</body>
-</html>
+    <body>
+     <div class="card-panel red darken-1" style="margin-top: 0px;">
+     <div class="z-depth-2 waves-effect waves-light" style="padding: 0px; height: 335px;">
+       <img src="fotodiri.jpg" >
+     </div>
+     
+        <p>
+        <h3>Bintang Muhammad</h3>
+        <i class="small mdi-social-school"></i> Pendidikan Teknik Informatika - UNY - 2014
+        <p>Masih Remaja | Masih Mahasiswa | Masih Belajar </p>
+        <hr class="z-depth-1"> 
+        </p>
+
+        <h5 >Cek Lainnya!</h5>
+        <a class="waves-effect waves-light btn" href="http://github.com/bintangmuh"><img src="GitHub-Mark-64px.png" height="15px" alt="gitlogo"> Github</a>
+        <a class="waves-effect waves-light btn  blue lighten-2" target="_blank" href="http://twitter.com/bintang_muh">Twitter</a>
+        <a class="waves-effect waves-light btn  indigo "  target="_blank" href="http://hidrocarbon.tumblr.com">Tumblr</a>
+     </div>
+     <div class="row footer">
+      <div class="grid-example col s12"><span>Copyright 2015 &copy; <a href="http://twitter.com/bintang_muh" title="">Bintang Muhammad</a></span><br>Hosted by <a href="http://github.com" title=""><img src="GitHub-Mark-64px.png" height="12px" alt="gitlogo"> GitHub</a></div>
+    </div>
+      <!--Import jQuery before materialize.js-->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script type="text/javascript" src="js/materialize.min.js"></script>
+    </body>
+  </html>
