404 html another revision

--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
         <h1>404! Not Found :(</h1>
         <p>Oops, halaman atau project yang anda cari tidak ada. coba kembali menuju halaman utama :) Terimakasih atas perhatiannya.</p>
         <img src="ocotocat.png" alt=""><br>   
-        <a class="waves-effect waves-light btn" href="http://bintangmuh.github.io">Home</a>
+        <a class="waves-effect waves-light btn" href="http://bintangmuh.github.io"><i class="small mdi-action-home"></i> Home</a>
      </div>
      <div class="row footer">
       <div class="grid-example col s12"><span>Copyright 2015 &copy; <a href="http://twitter.com/bintang_muh" title="">Bintang Muhammad</a></span><br>Hosted by <a href="http://github.com" title=""><img src="GitHub-Mark-64px.png" height="12px" alt="gitlogo"> GitHub</a></div>
