--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
     <body>
      <div class="card-panel red darken-1" style="margin-top: 0px;">
-     <div class="z-depth-2 waves-effect waves-light" style="padding: 0px; height: 335px;">
-       <img src="fotodiri.jpg" >
-     </div>
-     
+     <div class="row">
+       <div class="z-depth-2 waves-effect waves-light col s12 m4 offset-m4" style="padding: 0px;">
+       <img src="fotodiri.jpg" width="100%" style="margin-bottom: -6px;  ">
+      </div>
+     </div>   
         <p>
         <h3>Bintang Muhammad</h3>
         <i class="small mdi-social-school"></i> Pendidikan Teknik Informatika - UNY - 2014
