--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <p>
         <h3>Bintang Muhammad</h3>
         <i class="small mdi-social-school"></i> Pendidikan Teknik Informatika - UNY - 2014
+        <p>UI/UX designer | Front End Developer | Low-average coder</p>
         <p>Masih Remaja | Masih Mahasiswa | Masih Belajar </p>
         <hr class="z-depth-1"> 
         </p>
