--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
      </div>   
         <p>
         <h3>Bintang Muhammad</h3>
+        Pengen jadi Founder Traveenation
         <i class="small mdi-social-school"></i> Pendidikan Teknik Informatika - UNY - 2014
         <p>UI/UX designer | Front End Developer | Low-average coder</p>
         <p>Masih Remaja | Masih Mahasiswa | Masih Belajar </p>
