--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <div class="card-panel red darken-1" style="margin-top: 0px;">
      <div class="row">
        <div class="z-depth-2 waves-effect waves-light col s12 m4 offset-m4" style="padding: 0px;">
-       <img src="https://pbs.twimg.com/profile_images/613127249563291648/Yf9nJhb6.jpg" width="100%" style="margin-bottom: -6px;  ">
+       <img src="https://avatars0.githubusercontent.com/u/9084069?v=3&s=466" width="100%" style="margin-bottom: -6px;  ">
       </div>
      </div>   
         <p>
