--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <a class="waves-effect waves-light btn" href="http://github.com/bintangmuh"><img src="GitHub-Mark-64px.png" height="15px" alt="gitlogo"> Github</a>
         <a class="waves-effect waves-light btn  blue lighten-2" target="_blank" href="http://twitter.com/bintang_muh">Twitter</a>
         <a class="waves-effect waves-light btn  indigo "  target="_blank" href="http://hidrocarbon.tumblr.com">Tumblr</a>
+        <a class="waves-effect waves-light btn  blue "  target="_blank" href="http://instagram.com/bintang_muh">Instagram</a>
      </div>
      <div class="row footer">
       <div class="grid-example col s12"><span>Copyright 2015 &copy; <a href="http://twitter.com/bintang_muh" title="">Bintang Muhammad</a></span><br>Hosted by <a href="http://github.com" title=""><img src="GitHub-Mark-64px.png" height="12px" alt="gitlogo"> GitHub</a></div>
